# living-api-contract-guardian

./: .gitignore  COMPLETION_SUMMARY.txt  COMPREHENSIVE_TEST_SUMMARY.md  Dockerfile  MILESTONE_STATUS.md  Makefile  PROPERTY_TESTS_MANIFEST.md  PROPERTY_TESTS_SUMMARY.md  README.md  TESTER_REPORT.md  TESTER_STATUS_REPORT.md  TEST_COVERAGE_REPORT.md  action.yml  alembic.ini  check_tests.py  docker-compose.yml  pyproject.toml  quick_test_check.py  run_property_tests.py  run_tests.py  run_tests.sh  test_runner.py  validate_property_tests.py  validate_tests.py  verify_tests.py
.github/workflows/: ci.yml  e2e.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_endpoints_usages.py  0002_endpoints_usages_deprecations.py  0003_inferred_endpoints.py  0004_traffic_replay.py  0005_ci_runs.py  0006_guides.py  0007_campaigns.py
apps/api/: deps.py  main.py
apps/api/routes/: campaigns.py  ci.py  diff.py  guides.py  ingest.py  services.py
apps/cli/: __init__.py  main.py
apps/dashboard/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/dashboard/public/: .gitkeep
apps/dashboard/src/api/: client.ts  types.ts
apps/dashboard/src/app/: layout.tsx  page.tsx
apps/dashboard/src/app/campaigns/: page.tsx
apps/dashboard/src/app/campaigns/[id]/: page.tsx
apps/dashboard/src/app/diff/[id]/: page.tsx
apps/dashboard/src/app/services/[id]/: page.tsx
apps/dashboard/src/components/: decay-chart.tsx  providers.tsx
apps/dashboard/src/components/ui/: badge.tsx  card.tsx
apps/github_app/: Dockerfile  README.md  app.yml  package.json
apps/github_app/src/: annotations.js  backend.js  diff.js  index.js
apps/github_app/test/: index.test.js
apps/github_app/test/fixtures/: pull_request.labeled_bypass.json  pull_request.opened.json
fixtures/clients/: labels.yaml
fixtures/clients/js_axios/: client.js
fixtures/clients/js_fetch/: client.js
fixtures/clients/python_grpc/: client.py
fixtures/clients/python_httpx/: client.py
fixtures/clients/python_requests/: client.py
fixtures/clients/ts_axios/: client.ts
fixtures/diff/: openapi.base.json  openapi.head_additive.json  openapi.head_breaking.json
fixtures/traffic/: sample.grpc.jsonl  sample.har
infra/: docker-compose.e2e.yml
tests/: conftest.py  test_api.py  test_api_auth.py  test_campaigns.py  test_ci_diff_cli.py  test_ci_routes.py  test_ci_runs_api.py  test_diff_api.py  test_diff_openapi.py  test_diff_proto.py  test_diff_rules.py  test_guides_api.py  test_guides_syntax.py  test_hashing.py  test_ingest_traffic.py  test_migrations.py  test_mining_cli.py  test_mining_js.py  test_mining_python.py  test_mining_recall.py
tests/e2e/: conftest.py  test_e2e_demo.py
tests/property/: test_api_properties.py  test_api_routes_properties.py  test_campaigns_properties.py  test_ci_routes_properties.py  test_db_properties.py  test_diff_custom_rules_properties.py  test_diff_engine_properties.py  test_diff_integration_properties.py  test_diff_models_properties.py  test_diff_ruleset_properties.py  test_diff_spectral_properties.py  test_diff_walkers_properties.py  test_guides_properties.py  test_hashing_properties.py  test_ingestor_idempotency.py  test_merge_json_schemas.py  test_miner_invariants.py  test_mining_properties.py  test_models_properties.py  test_persist_callsites.py  test_redis_client_properties.py  test_schemas_properties.py  test_traffic_properties.py  test_version_properties.py  test_visitor_properties.py
