[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "living-api-contract-guardian"
version = "0.1.0"
description = "Living API Contract Guardian"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0.29",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "redis>=5.0",
  "httpx>=0.27",
  "typer>=0.12",
  "uuid_utils>=0.9",
  "tree-sitter==0.20.4",
  "tree-sitter-languages==1.10.2",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "hypothesis>=6.100",
  "ruff>=0.4",
  "black>=24.3",
  "mypy>=1.9",
  "types-redis>=4.6",
  "types-PyYAML>=6.0",
]

[project.scripts]
guardian = "apps.cli.main:main"

[tool.setuptools]
packages = [
  "apps",
  "apps.api",
  "apps.api.routes",
  "apps.cli",
  "guardian_core",
  "guardian_core.mining",
]

[tool.setuptools.package-dir]
"apps" = "apps"
"guardian_core" = "packages/guardian_core"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "vendor",
  ".venv",
  "fixtures",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
# B008: FastAPI relies on `= Depends(...)` defaults.
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "vendor|\\.venv"

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]
mypy_path = "packages"
explicit_package_bases = true
namespace_packages = true
exclude = "(^vendor/|^\\.venv/|^fixtures/)"

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["uuid_utils.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tree_sitter.*", "tree_sitter_languages.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages", "apps", "."]
asyncio_mode = "auto"
