[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "living-api-contract-guardian"
version = "0.1.0"
description = "Living API Contract Guardian"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0.29",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "redis>=5.0",
  "httpx>=0.27",
  "typer>=0.12",
  "uuid_utils>=0.9",
  "tree-sitter==0.20.4",
  "tree-sitter-languages==1.10.2",
  "PyYAML>=6.0",
  "haralyzer>=2.4,<3",
  "genson>=1.3,<2",
  "ijson>=3.2,<4",
  "python-multipart>=0.0.9",
  "protobuf>=4.25,<7",
  "litellm>=1.40",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.3",
  "hypothesis>=6.100",
  "ruff>=0.4",
  "black>=24.3",
  "mypy>=1.9",
  "types-redis>=4.6",
  "types-PyYAML>=6.0",
]

[project.scripts]
guardian = "apps.cli.main:main"

[tool.setuptools]
packages = [
  "apps",
  "apps.api",
  "apps.api.routes",
  "apps.cli",
  "guardian_core",
  "guardian_core.mining",
  "guardian_core.traffic",
  "guardian_diff",
  "guardian_diff.rules",
  "guardian_guides",
  "guardian_guides.prompts",
]

[tool.setuptools.package-data]
"guardian_diff.rules" = ["*.yml"]
"guardian_guides.prompts" = ["*.jinja"]

[tool.setuptools.package-dir]
"apps" = "apps"
"guardian_core" = "packages/guardian_core"
"guardian_diff" = "packages/guardian_diff"
"guardian_guides" = "packages/guardian_guides"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "vendor",
  ".venv",
  "fixtures",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
# B008: FastAPI relies on `= Depends(...)` defaults.
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "vendor|\\.venv"

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]
mypy_path = "packages"
explicit_package_bases = true
namespace_packages = true
exclude = "(^vendor/|^\\.venv/|^fixtures/.+/)"

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["uuid_utils.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tree_sitter.*", "tree_sitter_languages.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["haralyzer.*", "genson.*", "ijson.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google.protobuf.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["litellm", "litellm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages", "apps", "."]
asyncio_mode = "auto"
# pytest-timeout: cap any single test at 60s by default; the CI-diff
# fixture tests pin themselves tighter with @pytest.mark.timeout(...).
timeout = 60
timeout_method = "thread"
